--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
+    "dotenv": "^5.0.0",
     "material-ui": "^0.20.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.1",
